# composer

./: .gitignore  CLAUDE.md  Cargo.toml  FHL project.md  README.md  go.mod  main.go  package.json  pnpm-lock.yaml  task_breakdown.md  tech_design.md
.github/workflows/: ci.yml
crates/api-types/: Cargo.toml
crates/api-types/bindings/: AddProjectInstructionRequest.ts  AddProjectRepositoryRequest.ts  Agent.ts  AgentHealth.ts  AgentStatus.ts  AgentType.ts  AssignTaskRequest.ts  AuthStatus.ts  BrowseResponse.ts  CreateAgentRequest.ts  CreateProjectRequest.ts  CreateSessionRequest.ts  CreateTaskRequest.ts  CreateWorkflowRequest.ts  DirEntry.ts  LogType.ts  MoveTaskRequest.ts  Project.ts  ProjectInstruction.ts  ProjectRepository.ts  RepositoryRole.ts  ResumeSessionRequest.ts  SendSessionInputRequest.ts  Session.ts  SessionLog.ts  SessionMode.ts  SessionStatus.ts  StartTaskResponse.ts  StartWorkflowRequest.ts  Task.ts  TaskStatus.ts  UpdateProjectInstructionRequest.ts  UpdateProjectRepositoryRequest.ts  UpdateProjectRequest.ts  UpdateTaskRequest.ts  UpdateWorkflowRequest.ts  ValidationResult.ts  Workflow.ts  WorkflowDecisionRequest.ts  WorkflowDefinition.ts  (+12 more)
crates/api-types/src/: events.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: config.rs  credentials.rs  lib.rs  paths.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql  002_deduplicate_agents.sql  003_add_projects.sql  004_task_agent_config.sql  005_drop_task_repo_path.sql  006_task_simple_id.sql  007_task_pr_urls.sql  008_workflows.sql  009_global_workflows.sql  009_project_instructions.sql  011_session_name.sql  012_consolidate_step_types.sql  013_task_workflow_id.sql  014_dag_workflow.sql  015_task_completed_at.sql  016_task_links.sql
crates/db/src/: lib.rs  test_utils.rs
crates/db/src/models/: agent.rs  mod.rs  project.rs  project_instruction.rs  project_repository.rs  session.rs  session_log.rs  task.rs  task_link.rs  workflow.rs  workflow_run.rs  workflow_step_output.rs  worktree.rs
crates/executors/: Cargo.toml
crates/executors/src/: discovery.rs  error.rs  lib.rs  process_manager.rs  protocol.rs  types.rs
crates/executors/src/adapters/: claude_code.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs  worktree.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  lib.rs  main.rs
crates/server/src/routes/: agents.rs  filesystem.rs  frontend.rs  health.rs  mod.rs  projects.rs  sessions.rs  tasks.rs  workflows.rs  worktrees.rs  ws.rs
crates/server/tests/: routes.rs
crates/services/: Cargo.toml
crates/services/src/: agent_service.rs  event_bus.rs  lib.rs  project_service.rs  session_service.rs  task_service.rs  workflow_engine.rs  worktree_service.rs
tests/e2e/fixtures/: test-fixtures.ts
tests/e2e/helpers/: api-client.ts
tests/e2e/tests/: agent-pool.spec.ts  error-handling.spec.ts  navigation.spec.ts  projects.spec.ts  sessions.spec.ts  task-board.spec.ts  websocket.spec.ts  workflows.spec.ts
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs
tests/rust/tests/: api_types.rs  config.rs  db.rs  executors.rs  git.rs  server_routes.rs  services.rs  workflow_scenarios.rs
tests/web/components/: AgentCard.test.tsx  ProjectCard.test.tsx  StatusBadge.test.tsx  TaskCard.test.tsx
tests/web/hooks/: use-projects.test.ts  use-sessions.test.ts  use-tasks.test.ts
tests/web/lib/: api.test.ts  parse-claude-message.test.ts  utils.test.ts
tests/web/stores/: session-output-store.test.ts  ui-store.test.ts
