[workspace]
resolver = "2"
members = [
    "crates/api-types",
    "crates/config",
    "crates/db",
    "crates/executors",
    "crates/git",
    "crates/services",
    "crates/server",
    "tests/rust",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "sqlite", "uuid", "chrono", "migrate"
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Type generation
ts-rs = { version = "10", features = ["uuid-impl", "chrono-impl", "serde-json-impl"] }

# Git
git2 = "0.20"

# Frontend embedding
rust-embed = { version = "8", features = ["mime-guess"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
tokio-stream = "0.1"
dashmap = "6"
tokio-util = "0.7"
which = "7"
command-group = { version = "5.0", features = ["with-tokio"] }
mime_guess = "2"
toml = "0.8"
dirs = "6"
tracing-appender = "0.2"
tempfile = "3"
regex = "1"
once_cell = "1"

[profile.release]
strip = "symbols"
lto = "thin"
