[package]
name = "composer-db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
composer-api-types = { path = "../api-types" }
