[package]
name = "composer-executors"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
which = { workspace = true }
command-group = { workspace = true }
composer-api-types = { path = "../api-types" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
