[package]
name = "composer-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "composer_server"
path = "src/lib.rs"

[[bin]]
name = "composer-server"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
composer-api-types = { path = "../api-types" }
composer-config = { path = "../config" }
composer-db = { path = "../db" }
composer-services = { path = "../services" }
tracing-appender = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
