[package]
name = "composer-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Project crates
composer-api-types = { path = "../../crates/api-types" }
composer-db = { path = "../../crates/db" }
composer-executors = { path = "../../crates/executors" }
composer-git = { path = "../../crates/git" }
composer-services = { path = "../../crates/services" }
composer-config = { path = "../../crates/config" }
composer-server = { path = "../../crates/server" }

# Test dependencies
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum = { version = "0.8" }
